syntax = "proto2";

option java_package = "org.test.proto";
option java_outer_classname = "CycleProto";
option optimize_for = SPEED;

message InnerBean {

    optional int64 value1 = 1;

    optional int64 value2 = 2;

    optional int64 value3 = 3 [default = 1000];

    optional int64 value4 = 4 [default = 1200];

    optional string value5 = 5;

    optional bytes value6 = 6;

    optional InnerBean reference = 7;

}

message OuterBean {

    optional InnerBean bean1 = 1;

    optional InnerBean bean2 = 2;

    repeated InnerBean beans = 3;

}